examples/test/testpolicy15563.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15563
  namespace: namespace84
spec:
  podSelector:
    matchLabels:
      key45: value10
      key10: value3
      key46: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value25
          key9: value28
      podSelector:
        matchLabels:
          key47: value1
          key48: value19
